--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "mongodb": "^6.17.0",
+    "mongoose": "^8.16.4",
     "readline": "^1.3.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
